--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "bootstrap": "^5.3.8",
     "express": "^4.18.2",
+    "ngx-owl-carousel-o": "^17.0.1",
+    "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
