--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "ngx-owl-carousel-o": "^17.0.1",
     "ngx-spinner": "^17.0.0",
+    "ngx-stripe": "^17.2.0",
     "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
